--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "homepage": "https://github.com/mlaanderson/database-js-sqlite#readme",
   "dependencies": {
     "debug": "^3.1.0",
-    "sql.js": "^0.4.0"
+    "sql.js": "^0.4.0",
+    "sqlite3": "git+https://github.com/mapbox/node-sqlite3.git"
   },
   "devDependencies": {
     "database-js": "^3.0.2"
