--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/mlaanderson/database-js-sqlite#readme",
   "dependencies": {
+    "database-js-common": "git+https://github.com/mlaanderson/database-js-common.git",
     "debug": "^3.1.0",
     "sql.js": "^0.4.0",
     "sqlite3": "git+https://github.com/mapbox/node-sqlite3.git"
